# lambda-framework-rebound

./: .replit  analyze_extended.py  c1c3_expanded_results.json  create_figure.py  extended_prompt_study.py  find_uncensored_models.py  lambda_framework_colab.ipynb  paper.tex  per_prompt_breakdown.py  prompt_expansion_results.json  prompt_expansion_study.py  pyproject.toml  replit.md  run_expanded_c1c3.py  statistical_review.py  test_base_vs_rlhf.py  test_uncensored.py  test_uncensored_expanded.py  test_uncensored_final.py  test_uncensored_quick.py  test_uncensored_v2.py  trinity_c1c2c3_data.csv  trinity_c1c2c3_expanded.csv  trinity_chinese_fast.json  trinity_chinese_fast.py  trinity_chinese_models.py  trinity_complete_v25.py  trinity_experiment.py  trinity_extended_v3.py  trinity_fast.py  trinity_fast_models.json  trinity_fast_models.py  trinity_fast_results.json  trinity_full_experiment.py  trinity_gemini_deepseek.json  trinity_gemini_deepseek.py  trinity_latest_sota.json  trinity_latest_sota.py  trinity_multimodel.py  trinity_multimodel_results.json  (+16 more)
attached_assets/: Lambda_Framework_v2.5_COMPLETE_1769113347317.docx  Pasted--EVALUARE-FEEDBACK-CEL-MAI-RIGUROS-REVIEW-PRIMIT-Acesta_1769359671574.txt  Pasted--Framework-Validation-with-REBOUND-N-Body-Simulator--17_1768889741128.txt  Pasted--PROMPT-EXPANSION-STUDY-GOAL-Address-reviewer-concern-t_1769276014399.txt  Pasted--Replit-Agent-Prompt-Compression-Law-Experiments-Projec_1768925374858.txt  Pasted--Rezumat-al-Lucr-rii-v1-5-Ai-f-cut-un-upgrade-serios-ai_1769359406070.txt  Trinity_Experiments_1769250611622.py  (+6 more)
(+25 files in other folders)
